# boing.network

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  package-lock.json  package.json  pool-lines.hex  pool-meta.txt
.github/workflows/: boing-rpc-artifacts.yml  boing-sdk-rpc-integration.yml  boing-sdk.yml  canonical-pool-public-rpc.yml  deploy-pages.yml  native-boing-playwright-public-smoke.yml  native-boing-playwright.yml  native-dex-indexer-worker.yml  observer-ingest-d1.yml  release-desktop-hub.yml  release.yml
boing-sdk/: CHANGELOG.md  README.md  package-lock.json  package.json
boing-sdk/scripts/: embed-reference-fungible-secured-template-hex.mjs  embed-reference-fungible-template-hex.mjs  generate-operator-key.mjs  probe-rpc.mjs  verify.mjs
boing-sdk/src/: bincode.ts  callAbi.ts  calldata.ts  canonicalDeployArtifacts.ts  canonicalTestnet.ts  canonicalTestnetDex.ts  client.ts  create2.ts  defaultReferenceFungibleSecuredRuntimeBytecodeHex.ts  defaultReferenceFungibleSecuredTemplateBytecodeHex.ts  defaultReferenceFungibleTemplateBytecodeHex.ts  defaultReferenceFungibleTemplateBytecodeHex.txt  dexIntegration.ts  erc721Logs.ts  errors.ts  hex.ts  index.ts  indexerBatch.ts  indexerGaps.ts  indexerSync.ts  nativeAmm.ts  nativeAmmLogs.ts  (+27 more)
crates/boing-automation/: Cargo.toml
crates/boing-automation/src/: scheduler.rs
crates/boing-cli/: Cargo.toml
crates/boing-cli/src/: deploy.rs  dev.rs  init.rs  main.rs  metrics_register.rs  qa_apply.rs
crates/boing-consensus/: Cargo.toml
crates/boing-consensus/src/: engine.rs
crates/boing-execution/: Cargo.toml
crates/boing-execution/benches/: execution.rs
crates/boing-execution/examples/: dump_native_amm_pool.rs  dump_reference_token_artifacts.rs  print_canonical_testnet_dex_create2_addresses.rs  print_native_cp_create2_salt.rs  print_native_create2_manifest.rs  verify_canonical_cp_pool_create2_drift.rs
crates/boing-execution/src/: bytecode.rs  executor.rs  interpreter.rs  lib.rs  native_amm.rs  native_dex_factory.rs  native_dex_multihop_swap_router.rs  reference_fungible_secured.rs  reference_nft.rs  reference_token.rs  vm.rs
crates/boing-execution/tests/: proptest_execution.rs  proptest_mul.rs  proptest_native_amm.rs  proptest_shift.rs
crates/boing-node/: Cargo.toml
crates/boing-node/schemas/: developer_api.json
crates/boing-node/src/: block_producer.rs  block_validation.rs  lib.rs  logging.rs  main.rs  mempool.rs  native_dex_discovery.rs  node.rs  persistence.rs  rpc.rs  rpc_ws.rs  security.rs
crates/boing-node/tests/: account_proof_rpc.rs  block_import.rs  e2e_single_node.rs  multi_node_testnet.rs  native_amm_rpc_happy_path.rs  native_dex_factory_rpc_happy_path.rs  p2p_tx_gossip_rpc.rs  persistence.rs  qa_governance_pool.rs  receipts_rpc_integration.rs  simulate_contract_call_rpc.rs  simulate_rpc.rs  two_node_sync.rs
crates/boing-p2p/: Cargo.toml
crates/boing-p2p/src/: lib.rs  node.rs
crates/boing-primitives/: Cargo.toml
crates/boing-primitives/examples/: create2_contract_address.rs  dump_bincode.rs  nonce_derived_contract_address.rs
crates/boing-primitives/src/: lib.rs  types.rs
crates/boing-qa/: Cargo.toml
crates/boing-qa/src/: lib.rs  pool.rs  pool_config.rs
crates/boing-state/: Cargo.toml
crates/boing-state/src/: lib.rs  store.rs
desktop-hub/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop-hub/src-tauri/: Cargo.toml  tauri.conf.json
desktop-hub/src-tauri/capabilities/: default.json
desktop-hub/src-tauri/icons/: README.md  icon.icns
desktop-hub/src-tauri/src/: lib.rs  main.rs  single_instance_windows.rs
docs/: ACCELERATOR-APPLICATIONS.md  BEACON-ACCELERATOR-APPLICATION-DRAFT.md  BETA-READINESS.md  BOING-BLOCKCHAIN-DESIGN-PLAN.md  BOING-CANONICAL-DEPLOY-ARTIFACTS.md  BOING-DAPP-INTEGRATION.md  BOING-DESIGN-SYSTEM.md  BOING-EXPRESS-WALLET.md  BOING-INFRASTRUCTURE-INDEPENDENCE.md  BOING-L1-DEX-ENGINEERING.md  BOING-MINI-IR.md  BOING-NATIVE-DEX-CAPABILITY.md  BOING-NETWORK-ESSENTIALS.md  BOING-OBSERVER-AND-EXPRESS.md  BOING-OBSERVER-EXPLORER-PROMPT.md  BOING-PATTERN-AMM-LIQUIDITY.md  BOING-PATTERN-UPGRADE-PROXY.md  BOING-REFERENCE-NFT.md  BOING-REFERENCE-TOKEN.md  BOING-VM-CAPABILITY-PARITY-ROADMAP.md  BOING-VM-INDEPENDENCE.md  BUILD-ROADMAP.md  CANONICAL-MALICE-DEFINITION.md  CLOUDFLARED-TUNNEL-ALIGNMENT.md  DECENTRALIZATION-AND-NETWORKING.md  DEVELOPMENT-AND-ENHANCEMENTS.md  DEVNET-OPERATOR-NATIVE-AMM.md  E2-PARTNER-APP-NATIVE-BOING.md  EXECUTION-PARITY-TASK-LIST.md  GOVERNANCE-QA-RULES.md  HANDOFF-DEPENDENT-PROJECTS.md  HANDOFF_BOING_FINANCE_NATIVE_DEX_AND_DIRECTORY.md  HANDOFF_Boing_Network_Global_Token_Discovery.md  HANDOFF_DexDiscovery_Consumer_Repos.md  HANDOFF_NATIVE_DEX_DIRECTORY_R2_AND_CHAIN.md  HANDOFF_Universal_Contract_Deploy_Indexer.md  INCENTIVIZED-TESTNET-PROMOTION-AND-MIGRATION.md  INCENTIVIZED-TESTNET-READINESS.md  INCENTIVIZED-TESTNET.md  INDEXER-OPERATOR-STATS.md  (+46 more)
scripts/: INFRASTRUCTURE-SETUP.md  README-TESTNET.md  README.md  audit-native-dex-testnet.mjs  boing-smoke.mjs  canonical-testnet-dex-predicted.json  canonical-testnet-published.manifest.json  check-canonical-native-amm-pool.mjs  check-cloudflared-alignment.mjs  check-observer-readiness.mjs  compare-local-vs-public-testnet-tip.mjs  network-listings-release-sql.mjs  rpc-endpoint-check.mjs  start-bootnode-1.bat  start-bootnode-1.sh  start-bootnode-2.bat  start-bootnode-2.sh  start-cloudflare-tunnel.bat  start-testnet-node.bat  sync-canonical-testnet-from-manifest.mjs  upgrade-boing-node-from-release.ps1  upgrade-boing-node-from-release.sh  verify-native-dex-directory-worker.mjs  verify-public-testnet-rpc.mjs  vibeminer-public-testnet-preflight.mjs
tools/: README.md  boing-node-public-testnet.docker-compose.yml  boing-node-public-testnet.env.example  boing-node-public-testnet.kubernetes.example.yaml  boing-node-public-testnet.systemd.example  boing-vm-assemble.mjs  boing-vm-transpile-ir.mjs  observer-indexer-schema.sql
website/: .env.example  README.md  package-lock.json  package.json  schema.sql  wrangler.toml
(+221 files in other folders)
