[package]
name = "boing-automation"
version = "0.1.0"
edition = "2021"
description = "Native scheduler and automation primitives for Boing Network"

[dependencies]
boing-primitives = { path = "../boing-primitives" }
boing-state = { path = "../boing-state" }
boing-telemetry = { path = "../boing-telemetry" }
ed25519-dalek = "2"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["time"] }
thiserror = "1"
tracing = "0.1"

[dev-dependencies]
rand = "0.8"
