[package]
name = "boing-cli"
version = "0.1.0"
edition = "2021"
description = "Boing SDK CLI — init, dev, deploy for dApp development"

[[bin]]
name = "boing"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
bincode = "1"
dirs = "5"
thiserror = "1"
anyhow = "1"
boing-telemetry = { path = "../boing-telemetry" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
which = "6"
