[package]
name = "boing-consensus"
version = "0.1.0"
edition = "2021"
description = "PoS + HotStuff BFT consensus for Boing blockchain"

[dependencies]
boing-primitives = { path = "../boing-primitives" }
boing-telemetry = { path = "../boing-telemetry" }
tracing = "0.1"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
