[package]
name = "boing-execution"
version = "0.1.0"
edition = "2021"
description = "VM and parallel transaction execution for Boing blockchain"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
num-bigint = "0.4"
proptest = "1"
boing-primitives = { path = "../boing-primitives" }
boing-state = { path = "../boing-state" }
ed25519-dalek = "2"
rand = "0.8"

[[bench]]
name = "execution"
harness = false

[[example]]
name = "dump_native_amm_pool"
path = "examples/dump_native_amm_pool.rs"

[[example]]
name = "dump_reference_token_artifacts"
path = "examples/dump_reference_token_artifacts.rs"

[dependencies]
boing-primitives = { path = "../boing-primitives" }
boing-state = { path = "../boing-state" }
boing-qa = { path = "../boing-qa" }
boing-telemetry = { path = "../boing-telemetry" }
num-bigint = "0.4"
tracing = "0.1"
async-trait = "0.1"
thiserror = "1"
rayon = "1.10"
