[package]
name = "boing-execution"
version = "0.1.0"
edition = "2021"
description = "VM and parallel transaction execution for Boing blockchain"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
hex = "0.4"
num-bigint = "0.4"
proptest = "1"
serde_json = "1"
boing-primitives = { path = "../boing-primitives" }
boing-state = { path = "../boing-state" }
ed25519-dalek = "2"
rand = "0.8"

[[bench]]
name = "execution"
harness = false

[[example]]
name = "dump_native_amm_pool"
path = "examples/dump_native_amm_pool.rs"

[[example]]
name = "dump_native_dex_factory"
path = "examples/dump_native_dex_factory.rs"

[[example]]
name = "dump_native_dex_ledger_router"
path = "examples/dump_native_dex_ledger_router.rs"

[[example]]
name = "dump_native_dex_ledger_router_v2"
path = "examples/dump_native_dex_ledger_router_v2.rs"

[[example]]
name = "dump_native_dex_ledger_router_v3"
path = "examples/dump_native_dex_ledger_router_v3.rs"

[[example]]
name = "dump_native_dex_swap2_router"
path = "examples/dump_native_dex_swap2_router.rs"

[[example]]
name = "dump_native_amm_lp_vault"
path = "examples/dump_native_amm_lp_vault.rs"

[[example]]
name = "dump_native_lp_share_token"
path = "examples/dump_native_lp_share_token.rs"

[[example]]
name = "dump_reference_token_artifacts"
path = "examples/dump_reference_token_artifacts.rs"

[[example]]
name = "print_canonical_testnet_dex_create2_addresses"
path = "examples/print_canonical_testnet_dex_create2_addresses.rs"

[[example]]
name = "verify_canonical_cp_pool_create2_drift"
path = "examples/verify_canonical_cp_pool_create2_drift.rs"

[[example]]
name = "print_native_create2_manifest"
path = "examples/print_native_create2_manifest.rs"

[dependencies]
boing-primitives = { path = "../boing-primitives" }
boing-state = { path = "../boing-state" }
boing-qa = { path = "../boing-qa" }
boing-telemetry = { path = "../boing-telemetry" }
num-bigint = "0.4"
tracing = "0.1"
async-trait = "0.1"
thiserror = "1"
rayon = "1.10"
