[package]
name = "boing-node"
version = "0.1.0"
edition = "2021"
description = "Boing blockchain node"

[features]
default = ["mdns"]
# Disable mDNS on Windows to avoid EADDRINUSE (libp2p adds interface-specific listeners).
# Use --no-default-features when building for Windows.
mdns = ["boing-p2p/mdns"]

[lib]
name = "boing_node"
path = "src/lib.rs"

[[bin]]
name = "boing-node"
path = "src/main.rs"

[dependencies]
boing-primitives = { path = "../boing-primitives" }
boing-telemetry = { path = "../boing-telemetry" }
boing-tokenomics = { path = "../boing-tokenomics" }
ed25519-dalek = "2"
rand = "0.8"
boing-consensus = { path = "../boing-consensus" }
boing-state = { path = "../boing-state" }
boing-execution = { path = "../boing-execution" }
boing-qa = { path = "../boing-qa" }
boing-p2p = { path = "../boing-p2p", default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
axum = { version = "0.7", features = ["json", "ws"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "set-header", "request-id", "trace"] }
governor = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
hex = "0.4"
anyhow = "1"
thiserror = "1"

[dev-dependencies]
http-body-util = "0.1"
