[package]
name = "boing-p2p"
version = "0.1.0"
edition = "2021"
description = "P2P networking for Boing blockchain"

[features]
default = ["mdns"]
# mdns causes EADDRINUSE on Windows when libp2p adds interface-specific listeners.
# Use --no-default-features when building for Windows.
mdns = ["libp2p/mdns"]

[dependencies]
boing-primitives = { path = "../boing-primitives" }
boing-telemetry = { path = "../boing-telemetry" }
bincode = "1"
serde = { version = "1", features = ["derive"] }
libp2p = { version = "0.56", default-features = false, features = ["tcp", "noise", "yamux", "gossipsub", "tokio", "tls", "macros", "request-response", "cbor"] }
libp2p-core = { version = "0.43", default-features = false }
libp2p-swarm = { version = "0.47", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
async-trait = "0.1"
thiserror = "1"
