[package]
name = "boing-primitives"
version = "0.1.0"
edition = "2021"
description = "Core types, cryptography, and primitives for Boing blockchain"

[dependencies]
# Cryptography
blake3 = "1.5"
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"

# Serialization
serde = { version = "1", features = ["derive"] }
bincode = "1.3"

# Utilities
thiserror = "1"
hex = "0.4"
rand = "0.8"

[dev-dependencies]
boing-telemetry = { path = "../boing-telemetry" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
