[package]
name = "boing-qa"
version = "0.1.0"
edition = "2021"
description = "Protocol quality assurance: deterministic checks for deployment (Allow / Reject / Unsure). See docs/QUALITY-ASSURANCE-NETWORK.md"

[dependencies]
boing-primitives = { path = "../boing-primitives" }
boing-telemetry = { path = "../boing-telemetry" }
bincode = "1.3"
blake3 = "1.5"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"

[dev-dependencies]
ed25519-dalek = "2"
rand = "0.8"
