[package]
name = "boing-network-hub"
version = "0.1.0"
description = "Boing Network all-in-one desktop hub"
authors = ["Boing Network"]
license = ""
repository = ""
default-run = "boing-network-hub"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
