[package]
name = "boing-network-hub"
version = "0.1.27"
description = "Boing Network all-in-one desktop hub"
authors = ["Boing Network"]
license = ""
repository = ""
default-run = "boing-network-hub"
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
boing-telemetry = { path = "../../crates/boing-telemetry" }
serde_json = "1.0"
tauri = { version = "2", features = ["tray-icon"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# Windows: vendored single-instance (see single_instance_windows.rs) — upstream can miss FindWindowW
# during startup and incorrectly allow a second full instance.
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_DataExchange",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(all(not(target_os = "android"), not(target_os = "ios"), not(target_os = "windows")))'.dependencies]
tauri-plugin-single-instance = "2"
